--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <div class="container-fluid">
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light W-100" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="/img/logo.jpg" alt="" width="30" height="30"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -46,6 +45,9 @@
           </div>
         </div>
     </nav>
+    <div class="row container-fluid justify-content-center">
+      <img class="logo" src="img/logo.jpg" alt="logo.jpg">
+    </div>
     <div class="container-fluid" id="emptyRow"></div>
     <div class="row">
       <div class="col container-fluid d-flex flex-col justify-content-center">
@@ -158,13 +160,6 @@
                 </div>
               </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="row ">
-      <div class="colcontainer-fluid justify-content-center">
-        <div class="logoCont container-fluid justify-content-center">
-          <img class="logo" src="img/logo.jpg" alt="logo.jpg">
         </div>
       </div>
     </div>
