right navbar fixed. Working on dropdown background color

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                   <a class="nav-link active">Por encargo</a>
                 </li>
             </ul>
-            <form class="d-flex navbar-nav">
-              <div class="nav-item dropdown ">
+              <div class="nav-item dropdown navbar-nav" id="rightNav">
                 <a class="nav-link dropdown-toggle active " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Danos tu opinión
                 </a>
@@ -39,7 +38,6 @@
                   <li><a class="dropdown-item" href="contact.html">Contacto</a></li>
                 </ul>
               </div>
-            </form>
           </div>
         </div>
     </nav>
