--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid" id="emptyRowMenu"></div>
+    <div class="d-flex flex-column justify-content-center fixed-bottom" id="menuDiv">
+      <img class="img-fluid mx-auto" id="menuImg" src="/img/menuFrescor.jfif" alt="">
+    </div>
   </div>
 
     
