--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="menu.html">Menú semanal</a>
+                <a class="nav-link active" href="menu.html" target="_blank" >Menú semanal</a>
               </li>
-              <li class="nav-item">
-                  <a class="nav-link active">Por encargo</a>
-                </li>
             </ul>
               <div class="nav-item dropdown navbar-nav" id="rightNav">
                 <a class="nav-link dropdown-toggle active " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -155,14 +152,26 @@
                   </div>
                 </div>
               </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed d-flex flex-column" id="platosPorEncargo" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <div class="buttonText">OFERTAS</div>
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <div class="d-flex flex-column justify-content-center" id="menuDiv">
+                      <img class="img-fluid mx-auto" id="menuImg" src="/img/menuFrescor.jfif" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
           </div>
         </div>
       </div>
     </div>
     <div class="container-fluid" id="emptyRowMenu"></div>
-    <div class="d-flex flex-column justify-content-center fixed-bottom" id="menuDiv">
-      <img class="img-fluid mx-auto" id="menuImg" src="/img/menuFrescor.jfif" alt="">
-    </div>
+
   </div>
 
     
