--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="hideAll" onclick="hide()">
+<!-- <body data-bs-toggle="collapse" data-bs-target="#martes, #miercoles, #jueves, #viernes, #sabado"> -->
   <div class="container-fluid">
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light W-100" id="navbar">
         <div class="container-fluid">
@@ -64,12 +65,12 @@
             </button>
           </div>
       </p>
-      <div class="collapse" id="martes">
+      <div class="collapse" id="martes" onclick="martes()">
         <div class="card card-body">
           <h4>Los Martes en la Frescor...</h4>
         </div>
       </div>
-      <div class="collapse" id="miercoles">
+      <div class="collapse" id="miercoles" onclick="miercoles()">
         <div class="card card-body">
           Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
         </div>
