--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
 </head>
-<body class="hideAll" onclick="hide()">
+<body class="hideAll">
 <!-- <body data-bs-toggle="collapse" data-bs-target="#martes, #miercoles, #jueves, #viernes, #sabado"> -->
   <div class="container-fluid">
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light W-100" id="navbar">
@@ -46,48 +46,93 @@
     <div class="row ">
       <p>
           <div class="d-flex justify-content-center">
-            <button class="btn btn-primary m-1" type="button" data-bs-toggle="collapse" data-bs-target="#martes" aria-expanded="false" aria-controls="martes">
+            <button class="btn btn-primary m-1 day" type="button" data-bs-toggle="collapse" data-bs-target="#martes" aria-expanded="false" aria-controls="martes">
               Martes
             </button>
-            <button class="btn btn-primary m-1" type="button" data-bs-toggle="collapse" data-bs-target="#miercoles" aria-expanded="false" aria-controls="miercoles">
+            <button class="btn btn-primary m-1 day" type="button" data-bs-toggle="collapse" data-bs-target="#miercoles" aria-expanded="false" aria-controls="miercoles">
               Miércoles
             </button>
-            <button class="btn btn-primary m-1" type="button" data-bs-toggle="collapse" data-bs-target="#jueves" aria-expanded="false" aria-controls="jueves">
+            <button class="btn btn-primary m-1 day" type="button" data-bs-toggle="collapse" data-bs-target="#jueves" aria-expanded="false" aria-controls="jueves">
               Jueves
             </button>
-            <button class="btn btn-primary m-1" type="button" data-bs-toggle="collapse" data-bs-target="#viernes" aria-expanded="false" aria-controls="viernes">
+            <button class="btn btn-primary m-1 day" type="button" data-bs-toggle="collapse" data-bs-target="#viernes" aria-expanded="false" aria-controls="viernes">
               Viernes
             </button>
           </div>
           <div class="d-flex justify-content-center">   
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#sabado" aria-expanded="false" aria-controls="sabado">
+            <button class="btn btn-primary day" type="button" data-bs-toggle="collapse" data-bs-target="#sabado" aria-expanded="false" aria-controls="sabado">
               Sábado
             </button>
           </div>
       </p>
-      <div class="collapse" id="martes" onclick="martes()">
+      <div class="collapse" id="martes">
         <div class="card card-body">
-          <h4>Los Martes en la Frescor...</h4>
+          <h5>Los Martes en la Frescor...</h5>
+          <p>Arroz al horno <br>
+            Paella de pollo, conejo y albóndigas<br>
+            Fideuà "Del Senyoret"<br>
+            Macarrones carbonara<br>
+            Alitas asadas con salsa barbacoa<br>
+            Lomo de halibut con verduras y picadillo<br>
+            Ensalada de la casa
+          </p>
         </div>
       </div>
-      <div class="collapse" id="miercoles" onclick="miercoles()">
+      <div class="collapse" id="miercoles">
         <div class="card card-body">
-          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+          <h5>Los Miércoles en la Frescor...</h5>
+          <p>Paella Valenciana <br>
+            Fideuà clásica marinera<br>
+            Espirales vegetales con verduras y crema de queso al pesto<br>
+            Guiso de pollo con alcachofas<br>
+            Crema de marisco<br>
+            Bacalao al horno con tomate al ajillo<br>
+            Ensalada de piña, surimi y salsa rosa
+          </p>
         </div>
       </div>
       <div class="collapse" id="jueves">
         <div class="card card-body">
-          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+          <h5>Los Jueves en la Frescor...</h5>
+          <p>Paella de pollo y conejo <br>
+            Fideuà marinera con boletus<br>
+            Lasaña de carne<br>
+            Traseros de pollo rustidos<br>
+            Espirales con verduras<br>
+            Rape encebollado con soja y espinacas frescas<br>
+            Ensalada de la casa
+          </p>
         </div>
       </div>
       <div class="collapse" id="viernes">
         <div class="card card-body">
-          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+          <h5>Los Viernes en la Frescor...</h5>
+          <p>Arroz al horno <br>
+            Paella de pollo, conejo y albóndigas<br>
+            Fideuà marinera con verduras<br>
+            Espaguetis con bacon, york y salsa de champiñones<br>
+            Filete de limanda gratinado con queso y cebollino<br>
+            Cinta de lomo con salsa argentina<br>
+            Ensalada de la casa
+          </p>
         </div>
       </div>
       <div class="collapse" id="sabado">
         <div class="card card-body">
-          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+          <h5>Los Sábados en la Frescor...</h5>
+          <p>Paella Valenciana <br>
+            Paella de verduras con escarola fresca<br>
+            Fideuà de chipirones y alcachofas<br>
+            Arroz "Del Senyoret"<br>
+            Caracolas a los cuatro quesos<br>
+            Lasaña de carne<br>
+            Crepe de salmón<br>
+            Traseros de pollo con salsa teriyaki<br>
+            Confit de pato con confitura de fresas<br>
+            Bombas de carne<br>
+            Ensaladilla rusa<br>
+            Ensalada de la casa
+          </p>
         </div>
       </div>
     </div>
