map and contact added

--- a/contact.html
+++ b/contact.html
@@ -43,131 +43,19 @@
     </div>
     <div class="container-fluid" id="emptyRow"></div>
     <div class="row">
-      <div class="col container-fluid d-flex flex-col justify-content-center"  id="accordions">
-        <div class="container-fluid d-flex flex-column justify-content-center">
-          <div class="accordion w-100" id="accordionExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                  <button class="accordion-button d-flex flex-column " id="platosDelDia" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    <div class="buttonText">PLATOS DEL DÍA</div>
-                  </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                      <div id="carouselMenu1" class="carousel slide" data-bs-ride="carousel">
-                          <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselMenu1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselMenu1" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#carouselMenu1" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                          </div>
-                          <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <div class="d-flex justify-content-center">
-                                    <img src="/img/espirales.jpg" class="carru" alt="ensaladaLegumbres">
-                                </div>
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>ESPIRALES CARBONARA</h5>
-                                <!-- <p>Some representative placeholder content for the first slide.</p> -->
-                              </div>
-                            </div>
-                            <div class="carousel-item">
-                              <div class="d-flex justify-content-center">
-                                  <img src="/img/pollorustido.jpg" class="carru" alt="polloRustido">
-                              </div>
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>POLLO RUSTIDO</h5>
-                                <!-- <p>Some representative placeholder content for the second slide.</p> -->
-                              </div>
-                            </div>
-                            <div class="carousel-item">
-                              <img src="/img/paellamarisco.jpg" class="img-fluid" alt="paella marisco">
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>PAELLA DE MARISCO</h5>
-                                <!-- <p>Some representative placeholder content for the third slide.</p> -->
-                              </div>
-                            </div>
-                          </div>
-                          <button class="carousel-control-prev" type="button" data-bs-target="#carouselMenu1" data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                          </button>
-                          <button class="carousel-control-next" type="button" data-bs-target="#carouselMenu1" data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                          </button>
-                      </div>
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                  <button class="accordion-button collapsed d-flex flex-column" id="platosPorEncargo" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <div class="buttonText">PLATOS POR ENCARGO</div>
-                  </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <div id="carouselMenu2" class="carousel slide" data-bs-ride="carousel">
-                      <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselMenu2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselMenu2" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselMenu2" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                      </div>
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <div class="d-flex justify-content-center">
-                                <img src="/img/espirales.jpg" class="carru" alt="ensaladaLegumbres">
-                            </div>
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>ESPIRALES CARBONARA</h5>
-                            <!-- <p>Some representative placeholder content for the first slide.</p> -->
-                          </div>
-                        </div>
-                        <div class="carousel-item">
-                          <div class="d-flex justify-content-center">
-                              <img src="/img/pollorustido.jpg" class="carru" alt="polloRustido">
-                          </div>
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>POLLO RUSTIDO</h5>
-                            <!-- <p>Some representative placeholder content for the second slide.</p> -->
-                          </div>
-                        </div>
-                        <div class="carousel-item">
-                          <img src="/img/paellamarisco.jpg" class="d-block m-auto h-50 w-50" alt="paella marisco">
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>PAELLA DE MARISCO</h5>
-                            <!-- <p>Some representative placeholder content for the third slide.</p> -->
-                          </div>
-                        </div>
-                      </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselMenu2" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselMenu2" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
-                  </div>
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                  <button class="accordion-button collapsed d-flex flex-column" id="platosPorEncargo" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    <div class="buttonText">OFERTAS</div>
-                  </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <div class="d-flex flex-column justify-content-center" id="menuDiv">
-                      <img class="img-fluid mx-auto" id="menuImg" src="/img/menuFrescor.jfif" alt="">
-                    </div>
-                  </div>
-                </div>
-              </div>
+      <div class="col container-fluid d-flex flex-col justify-content-center">
+        <div class="contact container-fluid d-flex flex-col justify-content-center">
+          <div class="adress">
           </div>
+          <div class="map"></div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3087.861357396615!2d-0.4158412853495046!3d39.2913946312298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd61b2e25f90113d%3A0x7519bf3517b661bc!2sLa%20Frescor%20d&#39;Almussafes!5e0!3m2!1ses-419!2ses!4v1643493298502!5m2!1ses-419!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col container-fluid d-flex flex-col justify-content-center">
+
+
       </div>
     </div>
     <div class="container-fluid" id="emptyRowMenu"></div>
@@ -178,5 +66,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAewnl0xHdhkkTp902ts2nkKYzsCr9xXBw&callback=initMap&libraries=&v=weekly"
+    async
+  ></script>  
 </body>
 </html>
