--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,18 @@
     <div class="container-fluid" id="emptyRow"></div>
     <div class="row">
       <div class="col container-fluid d-flex flex-col justify-content-center">
-        <div class="contact container-fluid d-flex flex-col justify-content-center">
+        <div class="contact flex-col justify-content-center">
           <div class="adress">
+            <p>Carrer de Santa Ana, 17 <br> 
+              46440 Almussafes, Valencia <br>
+              +34 667 51 28 58 <br>
+              <a href="https://www.facebook.com/La-Frescor-de-Almussafes-1644481618930645" target="_blank"> Síguenos en Facebook</a>
+            </p>
           </div>
-          <div class="map"></div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3087.861357396615!2d-0.4158412853495046!3d39.2913946312298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd61b2e25f90113d%3A0x7519bf3517b661bc!2sLa%20Frescor%20d&#39;Almussafes!5e0!3m2!1ses-419!2ses!4v1643493298502!5m2!1ses-419!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <div class="map d-flex justify-content-center">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3087.861357396615!2d-0.4158412853495046!3d39.2913946312298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd61b2e25f90113d%3A0x7519bf3517b661bc!2sLa%20Frescor%20d&#39;Almussafes!5e0!3m2!1ses-419!2ses!4v1643493298502!5m2!1ses-419!2ses" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+
         </div>
       </div>
     </div>
