working on menu img hover

--- a/menu.html
+++ b/menu.html
@@ -68,7 +68,7 @@
       <div class="collapse" id="martes">
         <div class="card card-body">
           <h5>Los Martes en la Frescor...</h5>
-          <p>Arroz al horno <br>
+          <p><span id="arrozalhorno">Arroz al horno</span> <br>
             Paella de pollo, conejo y albóndigas<br>
             Fideuà "Del Senyoret"<br>
             Macarrones carbonara<br>
@@ -76,6 +76,7 @@
             Lomo de halibut con verduras y picadillo<br>
             Ensalada de la casa
           </p>
+          <img id="arrozalhornoimg" src="/img/arrozalhorno.jpg" alt="capture" style="display: none;">
         </div>
       </div>
       <div class="collapse" id="miercoles">
