--- a/index.html
+++ b/index.html
@@ -150,31 +150,69 @@
                         <button type="button" data-bs-target="#carouselMenu2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselMenu2" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselMenu2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselMenu2" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselMenu2" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#carouselMenu2" data-bs-slide-to="5" aria-label="Slide 6"></button>
                       </div>
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="d-flex justify-content-center">
-                                <img src="/img/espirales.jpg" class="carru" alt="ensaladaLegumbres">
+                                <img src="/img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
                             </div>
+                            <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-none d-md-block">
-                            <h5>ESPIRALES CARBONARA</h5>
+                            <h5>PAELLA VALENCIANA</h5>
                             <!-- <p>Some representative placeholder content for the first slide.</p> -->
                           </div>
                         </div>
                         <div class="carousel-item">
                           <div class="d-flex justify-content-center">
-                              <img src="/img/pollorustido.jpg" class="carru" alt="polloRustido">
+                              <img src="/img/fideuaOk.png" class="img-fluid carru" alt="polloRustido">
                           </div>
+                          <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-none d-md-block">
-                            <h5>POLLO RUSTIDO</h5>
+                            <h5>FIDEUÀ</h5>
                             <!-- <p>Some representative placeholder content for the second slide.</p> -->
                           </div>
                         </div>
                         <div class="carousel-item">
-                          <img src="/img/paellamarisco.jpg" class="d-block m-auto h-50 w-50" alt="paella marisco">
+                          <div class="d-flex justify-content-center">
+                              <img src="img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture">
+                          </div>
+                          <div class="emptyDivCaptions"></div>
                           <div class="carousel-caption d-none d-md-block">
-                            <h5>PAELLA DE MARISCO</h5>
-                            <!-- <p>Some representative placeholder content for the third slide.</p> -->
+                            <h5>ARROZ DEL SENYORET</h5>
+                            <!-- <p>Some representative placeholder content for the second slide.</p> -->
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <div class="d-flex justify-content-center">
+                              <img src="img/paellaverd.jpg" class="img-fluid carru" alt="capture">
+                          </div>
+                          <div class="emptyDivCaptions"></div>
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>PAELLA DE VERDURAS</h5>
+                            <!-- <p>Some representative placeholder content for the second slide.</p> -->
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <div class="d-flex justify-content-center">
+                              <img src="img/fideuapato.jpg" class="carru" alt="capture">
+                          </div>
+                          <div class="emptyDivCaptions"></div>
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>FIDEUÀ DE PATO FOIE Y BOLETUS</h5>
+                            <!-- <p>Some representative placeholder content for the second slide.</p> -->
+                          </div>
+                        </div>
+                        <div class="carousel-item">
+                          <div class="d-flex justify-content-center">
+                              <img src="img/arroznegro.jpg" class="img-fluid carru" alt="capture">
+                          </div>
+                          <div class="emptyDivCaptions"></div>
+                          <div class="carousel-caption d-none d-md-block">
+                            <h5>ARROZ NEGRO</h5>
+                            <!-- <p>Some representative placeholder content for the second slide.</p> -->
                           </div>
                         </div>
                       </div>
@@ -193,13 +231,13 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                   <button class="accordion-button collapsed d-flex flex-column" id="platosPorEncargo" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    <div class="buttonText">OFERTAS</div>
+                    <div class="buttonText">OFERTAS Y MENÚS</div>
                   </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <div class="d-flex flex-column justify-content-center" id="menuDiv">
-                      <img class="img-fluid mx-auto" id="menuImg" src="/img/menuFrescor.jfif" alt="">
+                      <img class="img-fluid mx-auto" id="menuImg" src="/img/packs.jpg" alt="">
                     </div>
                   </div>
                 </div>
