menu-hover in web ok. Working on the others

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                   <button class="accordion-button d-flex flex-column " id="platosDelDia" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    <div class="buttonText">PLATOS DEL DÍA</div>
+                    <div class="buttonText">HOY EN LA FRESCOR...</div>
                   </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -69,8 +69,8 @@
                                     <img src="/img/espirales.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
                                 </div>
                                 <div class="emptyDivCaptions"></div>
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>ESPIRALES CARBONARA</h5>
+                              <div class="carousel-caption d-md-block">
+                                <h6>ESPIRALES CARBONARA</h6>
                                 <!-- <p>Some representative placeholder content for the first slide.</p> -->
                               </div>
                             </div>
@@ -79,8 +79,8 @@
                                   <img src="/img/pollorustido.jpg" class="img-fluid carru" alt="polloRustido">
                               </div>
                               <div class="emptyDivCaptions"></div>
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>POLLO RUSTIDO</h5>
+                              <div class="carousel-caption d-md-block">
+                                <h6>POLLO RUSTIDO</h6>
                                 <!-- <p>Some representative placeholder content for the second slide.</p> -->
                               </div>
                             </div>
@@ -89,8 +89,8 @@
                                   <img src="img/arrozalhorno.jfif" class="img-fluid carru" alt="capture">
                               </div>
                               <div class="emptyDivCaptions"></div>
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>ARROZ AL HORNO</h5>
+                              <div class="carousel-caption d-md-block">
+                                <h6>ARROZ AL HORNO</h6>
                                 <!-- <p>Some representative placeholder content for the second slide.</p> -->
                               </div>
                             </div>
@@ -99,8 +99,8 @@
                                   <img src="img/fideua.jpg" class="img-fluid carru" alt="capture">
                               </div>
                               <div class="emptyDivCaptions"></div>
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>FIDEUÀ CLÁSICA MARINERA</h5>
+                              <div class="carousel-caption d-md-block">
+                                <h6>FIDEUÀ CLÁSICA MARINERA</h6>
                                 <!-- <p>Some representative placeholder content for the second slide.</p> -->
                               </div>
                             </div>
@@ -109,8 +109,8 @@
                                   <img src="img/rape.jpg" class="carru" alt="capture">
                               </div>
                               <div class="emptyDivCaptions"></div>
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>RAPE ENCEBOLLADO CON SOJA Y ESPINACAS FRESCAS</h5>
+                              <div class="carousel-caption d-md-block">
+                                <h6>RAPE ENCEBOLLADO</h6>
                                 <!-- <p>Some representative placeholder content for the second slide.</p> -->
                               </div>
                             </div>
@@ -119,8 +119,8 @@
                                   <img src="img/ensalada.jpg" class="img-fluid carru" alt="capture">
                               </div>
                               <div class="emptyDivCaptions"></div>
-                              <div class="carousel-caption d-none d-md-block">
-                                <h5>ENSALADA DE LA CASA</h5>
+                              <div class="carousel-caption  d-md-block">
+                                <h6>ENSALADA DE LA CASA</h6>
                                 <!-- <p>Some representative placeholder content for the second slide.</p> -->
                               </div>
                             </div>
@@ -160,8 +160,8 @@
                                 <img src="/img/paella-valenciana-tradicional.jpg" class="img-fluid carru" alt="ensaladaLegumbres">
                             </div>
                             <div class="emptyDivCaptions"></div>
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>PAELLA VALENCIANA</h5>
+                          <div class="carousel-caption d-md-block">
+                            <h6>PAELLA VALENCIANA</h6>
                             <!-- <p>Some representative placeholder content for the first slide.</p> -->
                           </div>
                         </div>
@@ -170,8 +170,8 @@
                               <img src="/img/fideuaOk.png" class="img-fluid carru" alt="polloRustido">
                           </div>
                           <div class="emptyDivCaptions"></div>
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>FIDEUÀ</h5>
+                          <div class="carousel-caption d-md-block">
+                            <h6>FIDEUÀ</h6>
                             <!-- <p>Some representative placeholder content for the second slide.</p> -->
                           </div>
                         </div>
@@ -180,8 +180,8 @@
                               <img src="img/arrozsenyoret.JPG" class="img-fluid carru" alt="capture">
                           </div>
                           <div class="emptyDivCaptions"></div>
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>ARROZ DEL SENYORET</h5>
+                          <div class="carousel-caption d-md-block">
+                            <h6>ARROZ DEL SENYORET</h6>
                             <!-- <p>Some representative placeholder content for the second slide.</p> -->
                           </div>
                         </div>
@@ -190,8 +190,8 @@
                               <img src="img/paellaverd.jpg" class="img-fluid carru" alt="capture">
                           </div>
                           <div class="emptyDivCaptions"></div>
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>PAELLA DE VERDURAS</h5>
+                          <div class="carousel-caption d-md-block">
+                            <h6>PAELLA DE VERDURAS</h6>
                             <!-- <p>Some representative placeholder content for the second slide.</p> -->
                           </div>
                         </div>
@@ -200,8 +200,8 @@
                               <img src="img/fideuapato.jpg" class="carru" alt="capture">
                           </div>
                           <div class="emptyDivCaptions"></div>
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>FIDEUÀ DE PATO FOIE Y BOLETUS</h5>
+                          <div class="carousel-caption d-md-block">
+                            <h6>FIDEUÀ DE PATO FOIE Y BOLETUS</h6>
                             <!-- <p>Some representative placeholder content for the second slide.</p> -->
                           </div>
                         </div>
@@ -210,8 +210,8 @@
                               <img src="img/arroznegro.jpg" class="img-fluid carru" alt="capture">
                           </div>
                           <div class="emptyDivCaptions"></div>
-                          <div class="carousel-caption d-none d-md-block">
-                            <h5>ARROZ NEGRO</h5>
+                          <div class="carousel-caption d-md-block">
+                            <h6>ARROZ NEGRO</h6>
                             <!-- <p>Some representative placeholder content for the second slide.</p> -->
                           </div>
                         </div>
