--- a/menu.html
+++ b/menu.html
@@ -66,17 +66,25 @@
           </div>
       </p>
       <div class="collapse" id="martes">
-        <div class="card card-body">
-          <h5>Los Martes en la Frescor...</h5>
-          <p><span id="arrozalhorno">Arroz al horno</span> <br>
-            Paella de pollo, conejo y albóndigas<br>
-            Fideuà "Del Senyoret"<br>
-            Macarrones carbonara<br>
-            Alitas asadas con salsa barbacoa<br>
-            Lomo de halibut con verduras y picadillo<br>
-            Ensalada de la casa
-          </p>
-          <img id="arrozalhornoimg" src="/img/arrozalhorno.jpg" alt="capture" style="display: none;">
+        <div class="card card-body ">
+          <div class="cardContent d-flex">
+            <div class="textCardContent">
+              <h5>Los Martes en la Frescor...</h5>
+            <p><span id="arrozalhorno">Arroz al horno</span> <br>
+              Paella de pollo, conejo y albóndigas<br>
+              Fideuà "Del Senyoret"<br>
+              Macarrones carbonara<br>
+              Alitas asadas con salsa barbacoa<br>
+              Lomo de halibut con verduras y picadillo<br>
+              Ensalada de la casa
+            </p>
+            </div>
+            <div>
+              <img id="arrozalhornoimg" class="imgCardContent"  src="/img/arrozalhorno.jpg" alt="capture" style="display: none;">
+            </div>
+            
+          </div>
+
         </div>
       </div>
       <div class="collapse" id="miercoles">
