--- a/menu.html
+++ b/menu.html
@@ -71,47 +71,78 @@
             <div class="textCardContent">
               <h5>Los Martes en la Frescor...</h5>
             <p><span id="arrozalhorno">Arroz al horno</span> <br>
-              Paella de pollo, conejo y albóndigas<br>
-              Fideuà "Del Senyoret"<br>
-              Macarrones carbonara<br>
-              Alitas asadas con salsa barbacoa<br>
-              Lomo de halibut con verduras y picadillo<br>
-              Ensalada de la casa
+              <span id="paellaalbon">Paella de pollo, conejo y albóndigas</span><br>
+              <span id="fideuasenyoret">Fideuà "Del Senyoret"</span><br>
+              <span id="macarronescarbonara">Macarrones carbonara</span><br>
+              <span id="alitas">Alitas asadas con salsa barbacoa</span><br>
+              <span id="halibut">Lomo de halibut con verduras y picadillo</span><br>
+              <span id="ensalada">Ensalada de la casa</span>
             </p>
             </div>
             <div>
               <img id="arrozalhornoimg" class="imgCardContent"  src="/img/arrozalhorno.jpg" alt="capture" style="display: none;">
+              <img id="paellaalbonimg" class="imgCardContent"  src="/img/paellaalbon.jpg" alt="capture" style="display: none;">
+              <img id="fideuasenyoretimg" class="imgCardContent"  src="/img/fideuasenyoret.jpg" alt="capture" style="display: none;">
+              <img id="macarronescarbonaraimg" class="imgCardContent"  src="/img/macarronescarbo.jfif" alt="capture" style="display: none;">
+              <img id="alitasimg" class="imgCardContent"  src="/img/alitas.jfif" alt="capture" style="display: none;">
+              <img id="halibutimg" class="imgCardContent"  src="/img/halibut.jpg" alt="capture" style="display: none;">
+              <img id="ensaladaimg" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
             </div>
-            
           </div>
 
         </div>
       </div>
       <div class="collapse" id="miercoles">
-        <div class="card card-body">
-          <h5>Los Miércoles en la Frescor...</h5>
-          <p>Paella Valenciana <br>
-            Fideuà clásica marinera<br>
-            Espirales vegetales con verduras y crema de queso al pesto<br>
-            Guiso de pollo con alcachofas<br>
-            Crema de marisco<br>
-            Bacalao al horno con tomate al ajillo<br>
-            Ensalada de piña, surimi y salsa rosa
-          </p>
+        <div class="card card-body ">
+          <div class="cardContent d-flex">
+            <div class="textCardContent">
+              <h5>Los Miércoles en la Frescor...</h5>
+            <p><span id="paellaval">Paella Valenciana</span> <br>
+              <span id="fideuaclasica">Fideuà clásica marinera</span><br>
+              <span id="espiralespesto">Espirales vegetales con verduras y crema de queso al pesto"</span><br>
+              <span id="guisopollo">Guiso de pollo con alcachofas</span><br>
+              <span id="crema">Crema de marisco</span><br>
+              <span id="bacalao">Bacalao al horno con tomate al ajillo</span><br>
+              <span id="ensaladapinya">Ensalada de piña, surimi y salsa rosa</span>
+            </p>
+            </div>
+            <div>
+              <img id="paellavalimg" class="imgCardContent"  src="/img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
+              <img id="fideuaclasicaimg" class="imgCardContent"  src="/img/fideua.jpg" alt="capture" style="display: none;">
+              <img id="espiralespestoimg" class="imgCardContent"  src="/img/espiralespesto.jfif" alt="capture" style="display: none;">
+              <img id="guisopolloimg" class="imgCardContent"  src="/img/guisopollo.jfif" alt="capture" style="display: none;">
+              <img id="cremaimg" class="imgCardContent"  src="/img/crema.jfif" alt="capture" style="display: none;">
+              <img id="bacalaoimg" class="imgCardContent"  src="/img/bacalao.jfif" alt="capture" style="display: none;">
+              <img id="ensaladapinyaimg" class="imgCardContent"  src="/img/ensapinya.jfif" alt="capture" style="display: none;">
+            </div>
+          </div>
+
         </div>
       </div>
       <div class="collapse" id="jueves">
-        <div class="card card-body">
-          <h5>Los Jueves en la Frescor...</h5>
-          <p>Paella de pollo y conejo <br>
-            Fideuà marinera con boletus<br>
-            Lasaña de carne<br>
-            Traseros de pollo rustidos<br>
-            Espirales con verduras<br>
-            Rape encebollado con soja y espinacas frescas<br>
-            Ensalada de la casa
-          </p>
-        </div>
+        <div class="card card-body ">
+          <div class="cardContent d-flex">
+            <div class="textCardContent">
+              <h5>Los Jueves en la Frescor...</h5>
+            <p><span id="paellapollo">Paella de pollo y conejo</span> <br>
+              <span id="fideuaboletus">Fideuà marinera con boletus</span><br>
+              <span id="lasagna">Lasaña de carne"</span><br>
+              <span id="traserospollo">Traseros de pollo rustidos</span><br>
+              <span id="espiralesverdura">Espirales con verduras</span><br>
+              <span id="rape">Rape encebollado con soja y espinacas frescas</span><br>
+              <span id="ensalada2">Ensalada de la casa</span>
+            </p>
+            </div>
+            <div>
+              <img id="paellapolloimg" class="imgCardContent"  src="/img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
+              <img id="fideuaboletusimg" class="imgCardContent"  src="/img/fideuaboletus.jfif" alt="capture" style="display: none;">
+              <img id="lasagnaimg" class="imgCardContent"  src="/img/lasagna.jpg" alt="capture" style="display: none;">
+              <img id="traserospolloimg" class="imgCardContent"  src="/img/traserospollo.jfif" alt="capture" style="display: none;">
+              <img id="espiralesverduraimg" class="imgCardContent"  src="/img/espiverdura.jfif" alt="capture" style="display: none;">
+              <img id="rapeimg" class="imgCardContent"  src="/img/rape.jpg" alt="capture" style="display: none;">
+              <img id="ensalada2img" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
+            </div>
+          </div>
       </div>
       <div class="collapse" id="viernes">
         <div class="card card-body">
