commit before new branch

--- a/menu.html
+++ b/menu.html
@@ -89,7 +89,6 @@
               <img id="ensaladaimg" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
             </div>
           </div>
-
         </div>
       </div>
       <div class="collapse" id="miercoles">
@@ -116,7 +115,6 @@
               <img id="ensaladapinyaimg" class="imgCardContent"  src="/img/ensapinya.jfif" alt="capture" style="display: none;">
             </div>
           </div>
-
         </div>
       </div>
       <div class="collapse" id="jueves">
@@ -143,18 +141,32 @@
               <img id="ensalada2img" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
             </div>
           </div>
+        </div>
       </div>
       <div class="collapse" id="viernes">
-        <div class="card card-body">
-          <h5>Los Viernes en la Frescor...</h5>
-          <p>Arroz al horno <br>
-            Paella de pollo, conejo y albóndigas<br>
-            Fideuà marinera con verduras<br>
-            Espaguetis con bacon, york y salsa de champiñones<br>
-            Filete de limanda gratinado con queso y cebollino<br>
-            Cinta de lomo con salsa argentina<br>
-            Ensalada de la casa
-          </p>
+        <div class="card card-body ">
+          <div class="cardContent d-flex">
+            <div class="textCardContent">
+              <h5>Los Viernes en la Frescor...</h5>
+            <p><span id="arrozalhorno2">Arroz al horno</span> <br>
+              <span id="fideuaboletus">Paella de pollo, conejo y albóndigas</span><br>
+              <span id="lasagna">Fideuà marinera con verduras"</span><br>
+              <span id="traserospollo">Espaguetis con bacon, york y salsa de champiñones</span><br>
+              <span id="espiralesverdura">Filete de limanda gratinado con queso y cebollino</span><br>
+              <span id="rape">Cinta de lomo con salsa argentina</span><br>
+              <span id="ensalada2">Ensalada de la casa</span>
+            </p>
+            </div>
+            <div>
+              <img id="arrozalhorno2img" class="imgCardContent"  src="/img/paella-valenciana-tradicional.jpg" alt="capture" style="display: none;">
+              <img id="fideuaboletusimg" class="imgCardContent"  src="/img/fideuaboletus.jfif" alt="capture" style="display: none;">
+              <img id="lasagnaimg" class="imgCardContent"  src="/img/lasagna.jpg" alt="capture" style="display: none;">
+              <img id="traserospolloimg" class="imgCardContent"  src="/img/traserospollo.jfif" alt="capture" style="display: none;">
+              <img id="espiralesverduraimg" class="imgCardContent"  src="/img/espiverdura.jfif" alt="capture" style="display: none;">
+              <img id="rapeimg" class="imgCardContent"  src="/img/rape.jpg" alt="capture" style="display: none;">
+              <img id="ensalada2img" class="imgCardContent"  src="/img/ensalada.jpg" alt="capture" style="display: none;">
+            </div>
+          </div>
         </div>
       </div>
       <div class="collapse" id="sabado">
