breakpoints added to accordions

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container-fluid" id="emptyRow"></div>
     <div class="row">
       <div class="col container-fluid d-flex flex-col justify-content-center"  id="accordions">
-        <div class="container-fluid d-flex flex-column justify-content-center">
+        <div class="acc container-fluid d-flex flex-column justify-content-center">
           <div class="accordion w-100" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
