--- a/menu.html
+++ b/menu.html
@@ -30,8 +30,8 @@
                   Danos tu opinión
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="suggestions.html">Sugerencia de platos</a></li>
-                  <li><a class="dropdown-item" href="rating.html">Comentarios al cocinero</a></li>
+                  <li><a class="dropdown-item disabled" href="suggestions.html">Sugerencia de platos</a></li>
+                  <li><a class="dropdown-item disabled" href="rating.html">Comentarios al cocinero</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="contact.html">Contacto</a></li>
                 </ul>
