top logo as home link added

--- a/menu.html
+++ b/menu.html
@@ -40,7 +40,9 @@
         </div>
     </nav>
     <div class="row fixed-top container-fluid justify-content-center">
-      <img class="logo" src="img/logo.jpg" alt="logo.jpg">
+      <a class="logo" href="/index.html">
+        <img class="logo" src="img/logo.jpg" alt="logo.jpg">
+      </a>
     </div>
     <div class="container-fluid" id="emptyRow"></div>
     <div class="row ">
